[gd_scene load_steps=4 format=3 uid="uid://cbqy0emo2vwxt"]

[ext_resource type="PackedScene" uid="uid://dbufqjo1ctiaa" path="res://Scene/world_icon.tscn" id="1_dlex7"]
[ext_resource type="Script" path="res://Script/world_select.gd" id="1_ffg0k"]
[ext_resource type="PackedScene" uid="uid://dh7vvdf6jjbiy" path="res://Scene/player_icon.tscn" id="3_40l87"]

[node name="WorldSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ffg0k")

[node name="WorldIcon" parent="." instance=ExtResource("1_dlex7")]
offset_left = 128.0
offset_top = 512.0
offset_right = 192.0
offset_bottom = 576.0

[node name="WorldIcon2" parent="." instance=ExtResource("1_dlex7")]
offset_left = 131.0
offset_top = 320.0
offset_right = 195.0
offset_bottom = 384.0
world_index = 2

[node name="WorldIcon3" parent="." instance=ExtResource("1_dlex7")]
offset_left = 323.0
offset_top = 320.0
offset_right = 387.0
offset_bottom = 384.0
world_index = 3

[node name="WorldIcon4" parent="." instance=ExtResource("1_dlex7")]
offset_left = 320.0
offset_top = 128.0
offset_right = 384.0
offset_bottom = 192.0
world_index = 4

[node name="WorldIcon5" parent="." instance=ExtResource("1_dlex7")]
offset_left = 512.0
offset_top = 320.0
offset_right = 576.0
offset_bottom = 384.0
world_index = 5

[node name="WorldIcon6" parent="." instance=ExtResource("1_dlex7")]
offset_left = 704.0
offset_top = 320.0
offset_right = 768.0
offset_bottom = 384.0
world_index = 6

[node name="WorldIcon7" parent="." instance=ExtResource("1_dlex7")]
offset_left = 896.0
offset_top = 320.0
offset_right = 960.0
offset_bottom = 384.0
world_index = 7

[node name="WorldIcon8" parent="." instance=ExtResource("1_dlex7")]
offset_left = 896.0
offset_top = 512.0
offset_right = 960.0
offset_bottom = 576.0
world_index = 8

[node name="PlayerIcon" parent="." instance=ExtResource("3_40l87")]
layout_mode = 0
